#755 fix to scss to handle Popover hiding behind modal

--- a/src/styles/app/mediapicker/_select_media_dialog.scss
+++ b/src/styles/app/mediapicker/_select_media_dialog.scss
@@ -1,5 +1,9 @@
 @import '../../_constants';
 
+div [data-reactroot] { 
+  z-index: 10001 !important;
+}
+
 .add-media {
 
   .select-media-dialog-modal {
@@ -58,6 +62,15 @@
         padding: 30px;
         min-height: 100%;
         overflow-y: scroll;
+
+        .metadata-detail-search {
+          position: relative;
+          transform: translate(0, 0) !important;
+          z-index: 20009;
+        }
+        div[type=data-reactroot] { 
+          z-index: 20009;
+        }
 
         .select-media-container {
           background-color: $white !important;
